added 6.9 and 6.10, changes on 6.8

--- a/Notes/6.8-Parallel-loops.md
+++ b/Notes/6.8-Parallel-loops.md
@@ -97,11 +97,11 @@ File: layers.c
 059: // Add zero-padding to input data of conv_layer l
 060: void pad_input(float* restrict X, Conv_Layer* l) {
 061:   int in_size = l->in_width * l->in_height * l->in_depth;
-062: #pragma acc parallel loop present(l) copyin(X[0:in_size]) 
+062: #pragma acc parallel loop present(l) copyin(X[0:in_size]) gang
 063:   for (int c = 0; c < l->in_depth; c++) {
 064:   #pragma acc loop 
 065:     for (int j = 0; j < l->in_height; j++) {
-066:     #pragma acc loop
+066:     #pragma acc loop vector
 067:       for (int i = 0; i < l->in_width; i++) {
 068:         int padded_idx = (j + l->padding) * l->padded_width + (i + l->padding) + c * l->padded_height * l->padded_width;
 069:         int in_idx = j * l->in_width + i + c * l->in_height * l->in_width;
@@ -636,4 +636,339 @@ Accelerator Kernel Timing data
     295: update directive reached 3 times
         295: data copyin transfers: 6
              device time(us): total=58 max=23 min=3 avg=9
+```
+
+### firstprivate
+
+```c
+File: layers.c
+060: void pad_input(float* restrict X, Conv_Layer* l) {
+061:   int c;
+062:   int in_size = l->in_width * l->in_height * l->in_depth;
+063: #pragma acc parallel loop present(l) copyin(X[0:in_size]) private(c) vector_length(128)
+064:   for (c = 0; c < l->in_depth; c++) {
+065:   #pragma acc loop firstprivate(c)
+066:     for (int j = 0; j < l->in_height; j++) {
+067:     #pragma acc loop vector
+068:       for (int i = 0; i < l->in_width; i++) {
+069:         int padded_idx = (j + l->padding) * l->padded_width + (i + l->padding) + c * l->padded_height * l->padded_width;
+070:         int in_idx = j * l->in_width + i + c * l->in_height * l->in_width;
+071:         l->in_padded[padded_idx] = X[in_idx];
+072:       }
+073:     }
+074:   }
+075: }
+076: 
+077: 
+078: // Performs the forward pass for a convolutional layer.
+079: // X: Input data, l: Convolutional layer, Y: Output data
+080: void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
+081:   pad_input(X, l); //Create input with zero-padding
+082:   int m;
+083:   // For each output feature map
+084: #pragma acc parallel loop present(l) copyout(Y[0:l->out_size]) gang collapse(2) vector_length(32) //private(m)
+085:   for (m = 0; m < l->out_depth; m++) {
+086:     for (int j = 0; j < l->out_height; j++) {
+087:     #pragma acc loop worker firstprivate(m)
+088:       for (int i = 0; i < l->out_width; i++) {
+089:         int y_idx = i + (l->out_width * (j + m * l->out_height)); // Output index
+090:         // Calculate dot product of Weights*Input
+091:         float sum = 0.0f;
+092:       #pragma acc loop reduction(+:sum) vector //cache(l->weights[(m * l->in_depth * l->filter_width * l->filter_width):(l->in_depth * l->filter_width * l->filter_width)])
+093:         for (int c = 0; c < l->in_depth; c++) {
+094:           for (int f_j = 0; f_j < l->filter_width; f_j++) {
+095:             for (int f_i = 0; f_i < l->filter_width; f_i++) {
+096:               int f_idx = f_i + (f_j * l->filter_width) + (c + m * l->in_depth) * (l->filter_width * l->filter_width); // Filter Index
+097:               int x_j = j * l->stride + f_j; // Input height index, increased by stride
+098:               int x_i = i * l->stride + f_i; // Input width index, increased by stride
+099:               int x_idx = c * l->padded_height * l->padded_width + x_j * l->padded_width + x_i; // Input index
+100:               sum += l->weights[f_idx] * l->in_padded[x_idx];
+101:             } // for f_i
+102:           } // for f_j
+103:         } // for c
+104:         sum += l->bias[m]; // Add bias
+105:         Y[y_idx] = sum; // Save output result
+106:       } // for i
+107:     } // for j
+108:   } // for m
+109: }
+
+```
+
+```
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -c main.c -o main.o
+arr2txt:
+    332, Zero trip check eliminated
+arr2txt_2:
+    354, Zero trip check eliminated
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -c layers.c -o layers.o
+make_conv_layer:
+     42, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->weights_size])
+         Generating enter data copyin(layer->in_padded[:layer->padded_size])
+         Generating enter data create(layer->bias[:M])
+free_conv:
+     53, Generating exit data delete(l->bias[:l->out_depth],l->in_padded[:l->padded_size],l[:1],l->weights[:l->weights_size])
+pad_input:
+     64, Generating present(l[:])
+         Generating copyin(X[:in_size]) [if not already present]
+         Generating NVIDIA GPU code
+         64, #pragma acc loop gang /* blockIdx.x */
+         66, #pragma acc loop seq
+         68, #pragma acc loop vector(128) /* threadIdx.x */
+     66, Loop is parallelizable
+     68, Loop is parallelizable
+conv_forward:
+     85, Generating present(l[:])
+         Generating copyout(Y[:l->out_size]) [if not already present]
+         Generating NVIDIA GPU code
+         85, #pragma acc loop gang collapse(2) /* blockIdx.x */
+         86,   /* blockIdx.x collapsed */
+         88, #pragma acc loop worker(4) /* threadIdx.y */
+         93, #pragma acc loop vector(32) /* threadIdx.x */
+             Generating reduction(+:sum)
+         94, #pragma acc loop seq
+         95, #pragma acc loop seq
+        102, Vector barrier inserted for vector loop reduction
+     88, Loop is parallelizable
+     93, Loop is parallelizable
+     94, Loop is parallelizable
+     95, Loop is parallelizable
+    100, FMA (fused multiply-add) instruction(s) generated
+pool_forward:
+    183, Zero trip check eliminated
+fc_forward:
+    238, FMA (fused multiply-add) instruction(s) generated
+load_conv:
+    296, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -c malloc2D.c -o malloc2D.o
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -c timer.c -o timer.o
+cpu_timer_stop:
+     11, FMA (fused multiply-add) instruction(s) generated
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial2parallel-pad$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.687760 seconds
+Create Network time:0.222531 seconds
+Load Network Parameters time:0.007984 seconds
+Create Ouputs time:0.000323 seconds
+
+Net Forward total time:14.002999 seconds
+    Time for conv1: 4.581862 seconds
+    Time for relu1: 0.445672 seconds
+    Time for pool1: 1.952279 seconds
+    Time for conv2: 3.507109 seconds
+    Time for relu2: 0.147387 seconds
+    Time for pool2: 0.624058 seconds
+    Time for conv3: 2.310334 seconds
+    Time for relu3: 0.040385 seconds
+    Time for pool3: 0.157810 seconds
+    Time for fc: 0.210419 seconds
+    Time for softmax: 0.011605 seconds
+
+  Conv: 10.399305 seconds
+  ReLU: 0.633444 seconds
+  Pool: 2.734147 seconds
+  FC:   0.210419 seconds
+  Softmax: 0.011605 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000680 seconds
+Free memory time:0.044189 seconds
+Total time:14.966467 seconds
+END!
+```
+
+#### NV_ACC_TIME=1
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.704063 seconds
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Create Network time:0.344473 seconds
+Load Network Parameters time:0.009132 seconds
+Create Ouputs time:0.000372 seconds
+
+Net Forward total time:17.978204 seconds
+    Time for conv1: 5.881185 seconds
+    Time for relu1: 0.462911 seconds
+    Time for pool1: 1.944840 seconds
+    Time for conv2: 4.792425 seconds
+    Time for relu2: 0.145730 seconds
+    Time for pool2: 0.622695 seconds
+    Time for conv3: 3.691439 seconds
+    Time for relu3: 0.043448 seconds
+    Time for pool3: 0.156832 seconds
+    Time for fc: 0.209997 seconds
+    Time for softmax: 0.012151 seconds
+
+  Conv: 14.365049 seconds
+  ReLU: 0.652089 seconds
+  Pool: 2.724367 seconds
+  FC:   0.209997 seconds
+  Softmax: 0.012151 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000744 seconds
+Free memory time:0.045257 seconds
+Total time:19.082244 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  make_conv_layer  NVIDIA  devicenum=0
+    time(us): 306
+    42: data region reached 9 times
+        42: data copyin transfers: 24
+             device time(us): total=306 max=40 min=4 avg=12
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  free_conv  NVIDIA  devicenum=0
+    time(us): 209
+    53: data region reached 9 times
+        53: data copyin transfers: 18
+             device time(us): total=209 max=38 min=3 avg=11
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  pad_input  NVIDIA  devicenum=0
+    time(us): 1,303,725
+    64: compute region reached 150000 times
+        64: kernel launched 150000 times
+            grid: [960]  block: [128]
+            elapsed time(us): total=1,951,756 max=1,712 min=12 avg=13
+    64: data region reached 300000 times
+        64: data copyin transfers: 150000
+             device time(us): total=1,303,725 max=3,603 min=3 avg=8
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 2,306,693
+    85: compute region reached 150000 times
+        85: kernel launched 150000 times
+            grid: [160-512]  block: [32x4]
+            elapsed time(us): total=4,940,393 max=3,607 min=19 avg=32
+    85: data region reached 300000 times
+        108: data copyout transfers: 150000
+             device time(us): total=2,306,693 max=1,069 min=8 avg=15
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  load_conv  NVIDIA  devicenum=0
+    time(us): 63
+    296: update directive reached 3 times
+        296: data copyin transfers: 6
+             device time(us): total=63 max=24 min=3 avg=10
+```
+
+#### nvprof
+
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.688848 seconds
+==2663084== NVPROF is profiling process 2663084, command: ./cnn-cifar10-profile
+Create Network time:0.565915 seconds
+Load Network Parameters time:0.008129 seconds
+Create Ouputs time:0.000330 seconds
+
+Net Forward total time:19.279343 seconds
+    Time for conv1: 6.917129 seconds
+    Time for relu1: 0.697517 seconds
+    Time for pool1: 1.559051 seconds
+    Time for conv2: 5.120366 seconds
+    Time for relu2: 0.204065 seconds
+    Time for pool2: 0.505995 seconds
+    Time for conv3: 3.827665 seconds
+    Time for relu3: 0.064111 seconds
+    Time for pool3: 0.129804 seconds
+    Time for fc: 0.215548 seconds
+    Time for softmax: 0.014447 seconds
+
+  Conv: 15.865161 seconds
+  ReLU: 0.965693 seconds
+  Pool: 2.194850 seconds
+  FC:   0.215548 seconds
+  Softmax: 0.014447 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000916 seconds
+Free memory time:0.047408 seconds
+Total time:20.590889 seconds
+END!
+==2663084== Profiling application: ./cnn-cifar10-profile
+==2663084== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   74.99%  3.87374s    150000  25.824us  11.679us  37.312us  _8layers_c_conv_forward_85_gpu
+                   10.16%  524.73ms    150000  3.4980us  3.2950us  13.504us  _8layers_c_pad_input_64_gpu
+                    8.89%  459.01ms    150000  3.0600us  1.4390us  18.464us  [CUDA memcpy DtoH]
+                    5.97%  308.38ms    150030  2.0550us     735ns  5.7600us  [CUDA memcpy HtoD]
+      API calls:   50.84%  6.21598s    750012  8.2870us  1.0560us  1.6144ms  cuStreamSynchronize
+                   21.85%  2.67101s    150000  17.806us  10.554us  7.6772ms  cuMemcpyDtoHAsync
+                   13.48%  1.64754s    150030  10.981us  2.6360us  2.4289ms  cuMemcpyHtoDAsync
+                   10.84%  1.32553s    300000  4.4180us  3.5320us  6.2373ms  cuLaunchKernel
+                    1.26%  154.25ms         1  154.25ms  154.25ms  154.25ms  cuDevicePrimaryCtxRetain
+                    0.68%  83.021ms    300000     276ns     179ns  16.911us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.42%  51.736ms    300009     172ns     120ns  794.23us  cuDeviceGetAttribute
+                    0.37%  45.548ms         1  45.548ms  45.548ms  45.548ms  cuMemHostAlloc
+                    0.23%  27.538ms     50023     550ns     346ns  3.3734ms  cuPointerGetAttributes
+                    0.02%  2.1042ms        18  116.90us  2.4690us  2.0042ms  cuMemAlloc
+                    0.01%  1.2628ms         1  1.2628ms  1.2628ms  1.2628ms  cuMemAllocHost
+                    0.00%  479.29us         1  479.29us  479.29us  479.29us  cuModuleLoadDataEx
+                    0.00%  14.027us         2  7.0130us     460ns  13.567us  cuModuleGetFunction
+                    0.00%  12.423us         1  12.423us  12.423us  12.423us  cuDeviceGetPCIBusId
+                    0.00%  3.0200us         3  1.0060us     210ns  1.9040us  cuCtxSetCurrent
+                    0.00%  2.4820us         3     827ns     194ns  2.0200us  cuDeviceGetCount
+                    0.00%  1.4140us         2     707ns     191ns  1.2230us  cuDeviceGet
+                    0.00%  1.1140us         3     371ns     164ns     501ns  cuDriverGetVersion
+                    0.00%     714ns         1     714ns     714ns     714ns  cuCtxGetCurrent
+                    0.00%     674ns         1     674ns     674ns     674ns  cuDeviceComputeCapability
+ OpenACC (excl):   29.63%  4.61105s    300000  15.370us  1.6490us  1.6253ms  acc_wait@layers.c:85
+                   18.00%  2.80076s    150000  18.671us  11.307us  7.6796ms  acc_enqueue_download@layers.c:108 (Y[:l->out_size])
+                   11.90%  1.85271s    300000  6.1750us  1.9730us  848.91us  acc_wait@layers.c:64
+                   11.40%  1.77466s    150000  11.831us  3.9830us  2.4312ms  acc_enqueue_upload@layers.c:64 (X[:in_size])
+                    5.61%  873.50ms    150000  5.8230us  4.9930us  839.82us  acc_enqueue_launch@layers.c:64 (_8layers_c_pad_input_64_gpu)
+                    5.08%  791.25ms    150000  5.2750us  4.4910us  6.2409ms  acc_enqueue_launch@layers.c:85 (_8layers_c_conv_forward_85_gpu)
+                    3.85%  598.85ms    150000  3.9920us  3.1430us  3.4214ms  acc_enter_data@layers.c:64
+                    2.95%  459.35ms    150000  3.0620us  2.6280us  806.00us  acc_exit_data@layers.c:85
+                    2.75%  427.42ms    150000  2.8490us  2.4630us  1.0149ms  acc_compute_construct@layers.c:64
+                    2.70%  420.31ms    150000  2.8020us  2.3880us  845.00us  acc_enter_data@layers.c:85
+                    2.16%  336.53ms    150000  2.2430us  1.8750us  2.7701ms  acc_exit_data@layers.c:64
+                    1.89%  294.91ms    150000  1.9660us  1.6710us  860.92us  acc_wait@layers.c:108
+                    1.76%  274.59ms    150000  1.8300us  1.6000us  787.55us  acc_compute_construct@layers.c:85
+                    0.30%  46.162ms         9  5.1291ms  12.896us  45.738ms  acc_enter_data@layers.c:42
+                    0.00%  570.93us         1  570.93us  570.93us  570.93us  acc_device_init@layers.c:42
+                    0.00%  97.775us         9  10.863us  4.7330us  40.738us  acc_wait@layers.c:42
+                    0.00%  88.950us        18  4.9410us     878ns  30.244us  acc_enqueue_upload@layers.c:42 (.attach.)
+                    0.00%  67.750us        18  3.7630us     889ns  24.027us  acc_enqueue_upload@layers.c:53 (.detach.)
+                    0.00%  58.065us         3  19.355us  4.2580us  49.052us  acc_enqueue_upload@layers.c:42 (layer[:1])
+                    0.00%  50.867us         9  5.6510us  1.7160us  24.425us  acc_exit_data@layers.c:53
+                    0.00%  40.507us         3  13.502us  7.3520us  18.830us  acc_enqueue_upload@layers.c:296 (l->weights[:l->weights_size])
+                    0.00%  32.623us         3  10.874us  7.7820us  12.535us  acc_enqueue_upload@layers.c:42 (layer->in_padded[:layer->padded_size])
+                    0.00%  21.268us         3  7.0890us  3.4870us  9.0630us  acc_wait@layers.c:296
+                    0.00%  13.891us         3  4.6300us  2.8000us  7.9020us  acc_update@layers.c:296
+                    0.00%  10.844us         3  3.6140us  3.3430us  3.8470us  acc_enqueue_upload@layers.c:296 (l->bias[:l->out_depth])
+                    0.00%       0ns         2       0ns       0ns       0ns  acc_alloc@layers.c:85
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_alloc@layers.c:42
+                    0.00%       0ns         3       0ns       0ns       0ns  acc_alloc@layers.c:64
+                    0.00%       0ns    150000       0ns       0ns       0ns  acc_create@layers.c:85
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_create@layers.c:42
+                    0.00%       0ns    150000       0ns       0ns       0ns  acc_create@layers.c:64
+                    0.00%       0ns    150000       0ns       0ns       0ns  acc_delete@layers.c:74
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_delete@layers.c:53
+                    0.00%       0ns    150000       0ns       0ns       0ns  acc_delete@layers.c:108
 ```
